kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tootest-service
  namespace: xom-bff-dev
  labels:
    app: tootestbffaplication
spec:
  selector:
    app: tootestbffaplication
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
